src/ExampleGrammarParser.java
// Generated from C:/Users/Evilcorez/Desktop/FOPL ANTLAR PROFRAMS/Task2gG/src\ExampleGrammar.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExampleGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, TYPE=9, 
		TRUE=10, FALSE=11, CONCAT=12, LT=13, LE=14, GT=15, GE=16, EQEQ=17, NEQ=18, 
		AND=19, OR=20, NOT=21, XOR=22, INC=23, DEC=24, MUL=25, DIV=26, ADD=27, 
		SUB=28, EQ=29, SEMICOLON=30, COMMA=31, LSQ=32, RSQ=33, LPAREN=34, RPAREN=35, 
		LCURL=36, RCURL=37, INT=38, FLOAT=39, IDENTIFIER=40, STRING=41, WS=42, 
		COMMENT=43;
	public static final int
		RULE_prgm = 0, RULE_decl = 1, RULE_declArr = 2, RULE_param = 3, RULE_declFunc = 4, 
		RULE_assignment = 5, RULE_assignStmt = 6, RULE_controlStmt = 7, RULE_atomStmt = 8, 
		RULE_block = 9, RULE_stmt = 10, RULE_unknownExpr = 11, RULE_exprAll = 12, 
		RULE_exprArr = 13, RULE_floatExprArr = 14, RULE_boolExprArr = 15, RULE_stringExprArr = 16, 
		RULE_expr = 17, RULE_floatExpr = 18, RULE_boolExpr = 19, RULE_stringExpr = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"prgm", "decl", "declArr", "param", "declFunc", "assignment", "assignStmt", 
			"controlStmt", "atomStmt", "block", "stmt", "unknownExpr", "exprAll", 
			"exprArr", "floatExprArr", "boolExprArr", "stringExprArr", "expr", "floatExpr", 
			"boolExpr", "stringExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'for'", "'while'", "'do'", "'input'", "'print'", 
			"'return'", null, "'true'", "'false'", "'##'", "'<'", "'<='", "'>'", 
			"'>='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'^'", "'++'", "'--'", 
			"'*'", "'/'", "'+'", "'-'", "'='", "';'", "','", "'['", "']'", "'('", 
			"')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "TYPE", "TRUE", 
			"FALSE", "CONCAT", "LT", "LE", "GT", "GE", "EQEQ", "NEQ", "AND", "OR", 
			"NOT", "XOR", "INC", "DEC", "MUL", "DIV", "ADD", "SUB", "EQ", "SEMICOLON", 
			"COMMA", "LSQ", "RSQ", "LPAREN", "RPAREN", "LCURL", "RCURL", "INT", "FLOAT", 
			"IDENTIFIER", "STRING", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExampleGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExampleGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrgmContext extends ParserRuleContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<DeclArrContext> declArr() {
			return getRuleContexts(DeclArrContext.class);
		}
		public DeclArrContext declArr(int i) {
			return getRuleContext(DeclArrContext.class,i);
		}
		public List<DeclFuncContext> declFunc() {
			return getRuleContexts(DeclFuncContext.class);
		}
		public DeclFuncContext declFunc(int i) {
			return getRuleContext(DeclFuncContext.class,i);
		}
		public PrgmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prgm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterPrgm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitPrgm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitPrgm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrgmContext prgm() throws RecognitionException {
		PrgmContext _localctx = new PrgmContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prgm);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(44);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(42);
						decl();
						}
						break;
					case 2:
						{
						setState(43);
						declArr();
						}
						break;
					}
					} 
				}
				setState(48);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49);
				declFunc();
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TYPE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(ExampleGrammarParser.TYPE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(ExampleGrammarParser.SEMICOLON, 0); }
		public TerminalNode EQ() { return getToken(ExampleGrammarParser.EQ, 0); }
		public ExprAllContext exprAll() {
			return getRuleContext(ExprAllContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(TYPE);
			setState(55);
			match(IDENTIFIER);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQ) {
				{
				setState(56);
				match(EQ);
				setState(57);
				exprAll();
				}
			}

			setState(60);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclArrContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(ExampleGrammarParser.TYPE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public TerminalNode LSQ() { return getToken(ExampleGrammarParser.LSQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RSQ() { return getToken(ExampleGrammarParser.RSQ, 0); }
		public TerminalNode SEMICOLON() { return getToken(ExampleGrammarParser.SEMICOLON, 0); }
		public TerminalNode EQ() { return getToken(ExampleGrammarParser.EQ, 0); }
		public ExprArrContext exprArr() {
			return getRuleContext(ExprArrContext.class,0);
		}
		public DeclArrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declArr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterDeclArr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitDeclArr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitDeclArr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclArrContext declArr() throws RecognitionException {
		DeclArrContext _localctx = new DeclArrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declArr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(TYPE);
			setState(63);
			match(IDENTIFIER);
			setState(64);
			match(LSQ);
			setState(65);
			expr();
			setState(66);
			match(RSQ);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQ) {
				{
				setState(67);
				match(EQ);
				setState(68);
				exprArr();
				}
			}

			setState(71);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(ExampleGrammarParser.TYPE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public TerminalNode LSQ() { return getToken(ExampleGrammarParser.LSQ, 0); }
		public TerminalNode RSQ() { return getToken(ExampleGrammarParser.RSQ, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(TYPE);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LSQ) {
				{
				setState(74);
				match(LSQ);
				setState(75);
				match(RSQ);
				}
			}

			setState(78);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclFuncContext extends ParserRuleContext {
		public ParamContext param;
		public List<ParamContext> params = new ArrayList<ParamContext>();
		public TerminalNode TYPE() { return getToken(ExampleGrammarParser.TYPE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(ExampleGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ExampleGrammarParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode LSQ() { return getToken(ExampleGrammarParser.LSQ, 0); }
		public TerminalNode RSQ() { return getToken(ExampleGrammarParser.RSQ, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExampleGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExampleGrammarParser.COMMA, i);
		}
		public DeclFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterDeclFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitDeclFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitDeclFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclFuncContext declFunc() throws RecognitionException {
		DeclFuncContext _localctx = new DeclFuncContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(TYPE);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LSQ) {
				{
				setState(81);
				match(LSQ);
				setState(82);
				match(RSQ);
				}
			}

			setState(85);
			match(IDENTIFIER);
			setState(86);
			match(LPAREN);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(87);
				((DeclFuncContext)_localctx).param = param();
				((DeclFuncContext)_localctx).params.add(((DeclFuncContext)_localctx).param);
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(88);
					match(COMMA);
					setState(89);
					((DeclFuncContext)_localctx).param = param();
					((DeclFuncContext)_localctx).params.add(((DeclFuncContext)_localctx).param);
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(97);
			match(RPAREN);
			setState(98);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DecIdContext extends AssignmentContext {
		public TerminalNode DEC() { return getToken(ExampleGrammarParser.DEC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public DecIdContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterDecId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitDecId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitDecId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IncIdContext extends AssignmentContext {
		public TerminalNode INC() { return getToken(ExampleGrammarParser.INC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public IncIdContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterIncId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitIncId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitIncId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignToIdAsArrContext extends AssignmentContext {
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public TerminalNode LSQ() { return getToken(ExampleGrammarParser.LSQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RSQ() { return getToken(ExampleGrammarParser.RSQ, 0); }
		public TerminalNode EQ() { return getToken(ExampleGrammarParser.EQ, 0); }
		public AssignToIdAsArrContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterAssignToIdAsArr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitAssignToIdAsArr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitAssignToIdAsArr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IncIdAsArrContext extends AssignmentContext {
		public TerminalNode INC() { return getToken(ExampleGrammarParser.INC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public TerminalNode LSQ() { return getToken(ExampleGrammarParser.LSQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RSQ() { return getToken(ExampleGrammarParser.RSQ, 0); }
		public IncIdAsArrContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterIncIdAsArr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitIncIdAsArr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitIncIdAsArr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignToIdContext extends AssignmentContext {
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public TerminalNode EQ() { return getToken(ExampleGrammarParser.EQ, 0); }
		public ExprAllContext exprAll() {
			return getRuleContext(ExprAllContext.class,0);
		}
		public AssignToIdContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterAssignToId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitAssignToId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitAssignToId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DecIdAsArrContext extends AssignmentContext {
		public TerminalNode DEC() { return getToken(ExampleGrammarParser.DEC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExampleGrammarParser.IDENTIFIER, 0); }
		public TerminalNode LSQ() { return getToken(ExampleGrammarParser.LSQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RSQ() { return getToken(ExampleGrammarParser.RSQ, 0); }
		public DecIdAsArrContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterDecIdAsArr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitDecIdAsArr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitDecIdAsArr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new AssignToIdContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(IDENTIFIER);
				setState(101);
				match(EQ);
				setState(102);
				exprAll();
				}
				break;
			case 2:
				_localctx = new AssignToIdAsArrContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				match(IDENTIFIER);
				setState(104);
				match(LSQ);
				setState(105);
				expr();
				setState(106);
				match(RSQ);
				setState(107);
				match(EQ);
				setState(108);
				expr();
				}
				break;
			case 3:
				_localctx = new IncIdContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				match(INC);
				setState(111);
				match(IDENTIFIER);
				}
				break;
			case 4:
				_localctx = new IncIdAsArrContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				match(INC);
				setState(113);
				match(IDENTIFIER);
				setState(114);
				match(LSQ);
				setState(115);
				expr();
				setState(116);
				match(RSQ);
				}
				break;
			case 5:
				_localctx = new DecIdContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(118);
				match(DEC);
				setState(119);
				match(IDENTIFIER);
				}
				break;
			case 6:
				_localctx = new DecIdAsArrContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(120);
				match(DEC);
				setState(121);
				match(IDENTIFIER);
				setState(122);
				match(LSQ);
				setState(123);
				expr();
				setState(124);
				match(RSQ);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStmtContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ExampleGrammarParser.SEMICOLON, 0); }
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).enterAssignStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExampleGrammarListener ) ((ExampleGrammarListener)listener).exitAssignStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExampleGrammarVisitor ) return ((ExampleGrammarVisitor<? extends T>)visitor).visitAssignStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			assignment();
			setState(129);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
